--- a/5-server-structure/package.json
+++ b/5-server-structure/package.json
@@ -4,7 +4,9 @@
   "description": "A custom service to store bookmarks and notes.",
   "main": "server.js",
   "dependencies": {
-    "express": "^4.17.1"
+    "compression": "^1.7.4",
+    "express": "^4.17.1",
+    "express-minify": "^1.0.0"
   },
   "devDependencies": {},
   "scripts": {
