--- a/5-server-assignment/package.json
+++ b/5-server-assignment/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "compression": "^1.7.4",
     "express": "^4.17.1",
-    "express-minify": "^1.0.0"
+    "express-minify": "^1.0.0",
+    "mongodb": "^3.5.6"
   },
   "devDependencies": {},
   "scripts": {
